Update Covid - 19 Data Analysis.ipynb

--- a/Covid - 19 Data Analysis.ipynb
+++ b/Covid - 19 Data Analysis.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to work with the **COVID19 dataset**, published by John Hopkins University, which consists of the data related to the cumulative number of confirmed cases, per day, in each Country. Also, we have another dataset consist of **various life factors**, scored by the people living in each country around the globe.  We are going to merge these two datasets to see if there is any **relationship between the spread of the virus in a country and how happy people are, living in that country.**\n"
+    "Worked with the **COVID19 dataset**, published by John Hopkins University, which consists of the data related to the cumulative number of confirmed cases, per day, in each Country. Also, we have another dataset consist of **various life factors**, scored by the people living in each country around the globe.  We are going to merge these two datasets to see if there is any **relationship between the spread of the virus in a country and how happy people are, living in that country.**\n"
    ]
   },
   {
